sjengida/g1/f_in_check
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/f_in_check/src/moves.c:1382:22: error: use of undeclared identifier 'knight_o_3'
v22 = ( const char *)knight_o_3; 
                     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/f_in_check/src/moves.c:1844:22: error: use of undeclared identifier 'knight_o_3'
v71 = ( const char *)knight_o_3; 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/f_in_check/src/obj/moves.o] Error 1
